--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "native-base": "^2.13.12",
     "react": "16.13.1",
     "react-native": "0.63.0",
-    "react-native-camera": "^3.31.0"
+    "react-native-camera": "^3.31.0",
+    "react-native-option-select": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
